Did not find an easy way of styling the landlord table for all landlords page. Issue is that when a user enters a long email or website, it elongates the table and if the table gets too long then it spills over the edge. Should be fine for demo as long as we keep only landlords with small enough info. Bootstrap should fix this when we move it.

--- a/public/stylesheets/landlords.css
+++ b/public/stylesheets/landlords.css
@@ -9,7 +9,3 @@
 	padding: 0px 20px 15px 10px;
 	box-shadow: 0px 0px 50px 0px #333333;
 }
-
-#landlord-table {
-	width: 400px;
-}
